chore: relicence under MIT/Apache2/AGPL

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "read-progress"
 version = "0.4.0"
 authors = ["Amanda McCann <amanda@technomancy.org>"]
 repository = "https://git.sr.ht/~ebel/read-progress-rs"
-license = "AGPL-3.0+"
+license = "MIT OR Apache-2.0 OR AGPL-3.0+"
 description = "A rust library wrapping a `Read` in something that records how many bytes have been read"
 
 [dependencies]
